# libsoxr-rs

./: .gitmodules  Cargo.toml
libsoxr-sys/: Cargo.toml  build.rs
src/: soxr.rs
