[package]
name = "libsoxr"
version = "0.2.9"
authors = ["Reinier Balt <lrbalt@gmail.com>"]
description = "Wrapper for libsoxr (resampling library for sounds)"
repository = "https://github.com/lrbalt/libsoxr-rs"
documentation = "https://docs.rs/libsoxr"
keywords = ["audio", "sound", "resampling", "sox", "soxr"]
categories = ["multimedia::audio"]
license = "LGPL-2.0"
readme = "README.md"
edition = "2018"
[workspace]
member=["libsoxr-sys"]
[dependencies]
libc = "0.2"
bitflags = "2.1.0"
libsoxr-sys = {path="libsoxr-sys"}

[dev-dependencies]
approx = "0.5.0"

[build-dependencies]
# pkg-config = "0.3"
